# dbsync_check

./: .gitignore  Cargo.toml  README.md  compare.sh
.sqlx/: query-345b3a0e945b6ad8ecaa615cd9c9f22363b87b5208ab689b918002b3cd0f40ae.json
src/: main.rs
